<resources>
    <string name="app_name">Hewanku</string>
    <string name="welcome">Welcome</string>
    <string name="back">Back</string>
    <string name="create">Create An</string>
    <string name="Account">Account</string>
    <string name="forgot">Forgot Password?</string>
    <string name="signIn">Sign in</string>
    <string name="signInCaps">SIGN IN</string>
    <string name="dont">Don\'t have an account? </string>
    <string name="already">Already have an account? </string>
    <string name="signUpCaps">SIGN UP</string>
    <string name="signup">Sign up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="ini_shape">ini shape</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="home">Home</string>
    <string name="clinic">Clinic</string>
    <string name="shelter">Shelter</string>
    <string name="profile">Profile</string>
    <string name="nama">Nama</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>